# tracetorch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: docs.yml  pypi.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  quickstart.rst
examples/: T0_getting_started.ipynb  T0_getting_started.py  T1_memorize.py  T2_monotonic_mnist.py  T2_nonmonotonic_mnist.py  T3_nonmonotonic_mnist.py  byte_lm.py  monotonic_mnist.py  test.py  tiny_shakespeare.py  wiki.py
examples/BirdCLEF+2026/: birdclef_architecture.py  birdclef_pretrain.py  birdclef_train.py  dummy.py  fdsr_vis.py  sng_vis.py
examples/MNIST/: main.py  requirements.txt
examples/SHD/: main.py  requirements.txt
examples/byte_lm/: architecture.py  byte_lm.py  inference.py  train.py
examples/deprecated/: T1_monotonic_mnist.py
examples/graph_network_visualizations/: sng_vis.py  tng_vis.py
examples/heidelberg_digits/: main.py  requirements.txt
examples/mnist/: monotonic.py  noisy.py  non_deterministic.py  nonmonotonic.py  rate_coded.py  reinforcement.py  requirements.txt  sequential.py
examples/plotting/: __init__.py  plotting.py
in_development/: _reflect.py  lif_backward_fix.py  refactor_testing.py
in_development/nn_module_refactor/: __init__.py  _lif.py  _lis.py  _sequential.py
testing/: _reinforce_manager.py  entropy_testing.py
tests/: classification_test.py  frequency_calc_for_lif.py  garbage.py  lif_test.py  mnist.py  poisson_clicks.py  sigmoid_test.py  softmax_test.py  test.py  test_core.py
tracetorch/: __init__.py
tracetorch/core/: __init__.py  _layer.py  _model.py
tracetorch/eprop/: __init__.py  _alif.py  _lif.py  _lis.py  _readout.py  _sequential.py
tracetorch/functional/: __init__.py  _convert_decay.py  _decay_calculations.py  _decay_conversion.py  _halflife_decay_conversion.py  _heaveside_surrogates.py  _inverse_functions.py  _misc.py  _quant_functions.py  _shuffle_list.py  _sigmoid_derivative.py  _sigmoid_inverse.py  _softplus_inverse.py  _spike_functions.py  _surrogates.py
tracetorch/legacy/: __init__.py
tracetorch/loss/: __init__.py  _actor_critic.py  _cross_entropy.py  _logprob.py  _mse.py  _reflect.py  _reflect_multi_time_frames.py  _soft_cross_entropy.py
tracetorch/nn/: __init__.py  _fdsr.py  _lif.py  _lis.py  _sequential.py  _sigmoid.py  _sng.py  _softmax.py  _tng.py
tracetorch/plot/: __init__.py  _distributions.py  _line_graph.py  _measurement_manager.py  _render_image.py  _spike_train.py
tracetorch/rnn/: __init__.py  _gru.py  _lstm.py  _mamba.py  _rnn.py  _rnnlayer.py  _selective_ssm.py
tracetorch/snn/: __init__.py  _blif.py  _brlif.py  _bslif.py  _bsrlif.py  _dlif.py  _fdsr.py  _leaky.py  (+23 more)
tutorials/: T1_memorizing_patterns.py  T2_RL_mnist.py  T2_mnist.py  classification_test.py  dummy.py  eprop.py  eprop_mnist.py  example.py  grad_trace_mnist_supervised.py  lif_test.py  mnist.py  mnist_bptt.py  mnist_continuous_reward_rl.py  mnist_online.py  mnist_rl.py  old_vs_new.py  reflect_multi_time_frame.py  torch_vs_tracetorch_mnist.py
(+142 files in other folders)
