[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracetorch"
version = "0.4.0"
authors = [{ name = "Yegor Men", email = "yegor.mn@gmail.com" }]
description = "A strict, ergonomic and \"just works\" Spiking Neural Network library for PyTorch."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = ["torch", "numpy", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Yegor-men/tracetorch"
Repository = "https://github.com/Yegor-men/tracetorch"
Issues = "https://github.com/Yegor-men/tracetorch/issues"
Documentation = "https://yegor-men.github.io/tracetorch/"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracetorch*"]
exclude = ["media*", "examples*", "docs*"]