[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracetorch"
version = "0.5.2"
authors = [{ name = "Yegor Men", email = "yegor.mn@gmail.com" }]
description = "A strict, ergonomic, and powerful Spiking Neural Network (SNN) library for PyTorch."
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
dependencies = ["torch", "numpy", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Yegor-men/tracetorch"
Repository = "https://github.com/Yegor-men/tracetorch"
Issues = "https://github.com/Yegor-men/tracetorch/issues"
Documentation = "https://yegor-men.github.io/tracetorch/"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracetorch*"]
exclude = ["docs*", "examples*", "media*"]