[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracetorch"
version = "0.19.0"
authors = [{ name = "Yegor Menovchshikov", email = "yegor.mn@gmail.com" }]
description = "A strict, ergonomic, and powerful library for SNNs, RNNs and SSMs in PyTorch."
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
dependencies = ["torch>=2.0.0", "numpy>=1.20.0", "matplotlib>=3.0.0", "scipy>=1.10.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Yegor-men/tracetorch"
Repository = "https://github.com/Yegor-men/tracetorch"
Issues = "https://github.com/Yegor-men/tracetorch/issues"
Documentation = "https://yegor-men.github.io/tracetorch/"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracetorch*"]
exclude = ["docs*", "examples*", "media*"]